--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ Version:1.5
 ---------------------------------------------------------------------- */
 body { margin:0; padding:0; background:#e9ebe8;
        font-family:"Century Gothic",Arial,sans-serif;
-       color:#333; }
+       color:#333;  word-wrap: break-word;}
 a img { border:none; verticle-align:top; }
 a, a:visited { outline:none; color:#3F7985; }
 a:hover { color:#20aede; }
